--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,12 +10,12 @@
               </a>
             </li>
             <li>
-              <a href="https://github.com/panxw?tab=repositories">
-                项 目
+              <a href="/tags.html">
+                分 类 
               </a>
             </li>
             <li>
-              <a href="http://www.linkedin.com/in/panxw">
+              <a href="http://www.linkedin.com/">
                 关 于
               </a>
             </li>
