--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,8 +15,8 @@
               </a>
             </li>
             <li>
-              <a href="http://www.linkedin.com/">
-                关 于
+              <a href="/tags.html">
+                链 接
               </a>
             </li>
           </ul>
