--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,5 +1,4 @@
             <p align="center">
-				Copyright &copy; www.winfirm.cn 2014, hosted on <a href="https://github.com/panxw">GitHub</a>, powered by Jekyll. <a href="https://github.com/panxw/panxw.github.com">[source]</a>  (qq:85902258)
-				<br/>
-				 <a href="http://www.winfirm.cn/atom.xml">[Feed]</a>
+				Copyright &copy; 2014 <a href="https://blog.pop925.net/">NetCafe</a> , Hosted on <a href="https://github.com/">GitHub</a>, Powered by Jekyll. 
+				
             </p>
