--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,8 +15,13 @@
               </a>
             </li>
             <li>
-              <a href="/tags.html">
+              <a href="/links.html">
                 链 接
+              </a>
+            </li>
+            <li>
+              <a href="http://a.pop925.net/atom.xml">
+                RSS
               </a>
             </li>
           </ul>
