--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,7 +15,7 @@
               </a>
             </li>
             <li>
-              <a href="/links.html">
+              <a href="_includes/links.html">
                 链 接
               </a>
             </li>
