--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
             </span>
           </button>
           <a class="navbar-brand" href="/index.html">
-            Xuewen Pan's Blog
+            NetCafe
           </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,7 +71,7 @@
           <!-- Blog Search Well -->
           <div class="well">
             <h4>
-              站内搜索
+              搜 索
             </h4>
             {% include search.html %} 
             <!-- /.input-group -->
@@ -89,7 +89,7 @@
           <!-- Blog Links Well -->
           <div class="well">
             <h4>
-              相关链接
+              链 接
             </h4>
             {% include links.html %} 
           </div>
