--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,8 +15,8 @@
               </a>
             </li>
             <li>
-              <a href="_includes/links.html">
-                链 接
+              <a href="/about.html">
+                About
               </a>
             </li>
             <li>
