--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,37 +1,32 @@
             <ul class="list-unstyled">
               <li>
-                <a href="https://github.com/panxw">
+                <a href="https://github.com/">
                   GitHub
                 </a>
               </li>
-              <li>
-                <a href="http://my.oschina.net/winfirm/">
-                  OSChina
-                </a>
-              </li>
-              <li>
-                <a href="http://www.douban.com/people/38430153/">
-                  Douban
+               <li>
+                <a href="http://www.pop925.net/">
+                  英语文摘
                 </a>
               </li>              
-              <li>
-                <a href="http://blog.chinaunix.net/uid/22985736.html">
-                  Cublog
-                </a>
-              </li>
-              <li>
+               <li>
                 <a href="http://www.ruanyifeng.com/blog/">
                   Ruanyifeng's Blog
                 </a>
               </li>
               <li>
-                <a href="http://blog.jobbole.com/">
-                  Jobbole
+                <a href="http://www.mifengtd.cn/">
+                  褪墨
                 </a>
               </li>
               <li>
                 <a href="http://99u.com/">
                   99U
                 </a>
-              </li>		  
+              </li>
+              <li>
+                <a href="http://www.iplaysoft.com/">
+                  异次元软件
+                </a>
+              </li>
             </ul>
