--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,13 +5,18 @@
               </a>
             </li>
             <li>
+              <a href="/tags.html">
+                分 类 
+              </a>
+            </li>
+            <li>
               <a href="/faqs.html">
                 推 荐
               </a>
             </li>
             <li>
-              <a href="/tags.html">
-                分 类 
+              <a href="http://hijoe.tk">
+                文 摘
               </a>
             </li>
             <li>
