--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,23 +1,23 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/categories.html#reading">
-                      阅读摘要
+                    <a href="/categories.html#info">
+                      信息||Info
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#linux">
-                      Linux
+                    <a href="/categories.html#life">
+                      生活||Life
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#embedded">
-                      嵌入式
+                    <a href="/categories.html#music">
+                      音乐||Music
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#android">
-                      Android开发
+                    <a href="/categories.html#fun">
+                      娱乐||Fun
                     </a>
                   </li>
                 </ul>
@@ -26,23 +26,23 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/categories.html#java">
-                      Java开发
+                    <a href="/categories.html#movie">
+                      电影||Movie
                     </a>
                   </li>                  
 		  <li>
-                    <a href="/categories.html#cocos2d">
-                      Cocos2d开发
+                    <a href="/categories.html#jobs">
+                      职场||Jobs
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#web">
-                      Web开发
+                    <a href="/categories.html#Finance">
+                      理财||Finance
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#network">
-                      网络相关
+                    <a href="/categories.html#Creation">
+                      创意||Creation
                     </a>
                   </li>
                 </ul>
