--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,7 +1,7 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/categories.html#信息||Info">
+                    <a href="/categories.html#info">
                       信息||Info
                     </a>
                   </li>
@@ -11,13 +11,13 @@
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#music">
-                      音乐||Music
+                    <a href="/categories.html#jobs">
+                      职场||Jobs
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#fun">
-                      娱乐||Fun
+                    <a href="/categories.html#Finance">
+                      理财||Finance
                     </a>
                   </li>
                 </ul>
@@ -31,13 +31,13 @@
                     </a>
                   </li>                  
 		  <li>
-                    <a href="/categories.html#jobs">
-                      职场||Jobs
+                    <a href="/categories.html#music">
+                      音乐||Music
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#Finance">
-                      理财||Finance
+                    <a href="/categories.html#fun">
+                      娱乐||Fun
                     </a>
                   </li>
                   <li>
