--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,4 +1,4 @@
             <p align="center">
-				Copyright &copy; 2014 <a href="https://blog.pop925.net/">NetCafe</a> , Hosted on <a href="https://github.com/">GitHub</a>, Powered by Jekyll. 
+				Copyright &copy; 2014 <a href="https://blog.pop925.net/">NetCafe</a> All Rights Reserved. 
 				
             </p>
