--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -25,7 +25,7 @@
               </a>
             </li>
             <li>
-              <a href="http://a.pop925.net/atom.xml">
+              <a href="http://blog.pop925.net/atom.xml">
                 RSS
               </a>
             </li>
