--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
               分 类
             </h4>
             <div class="row">
-              {% include categories.html %} 
+              {% include tags.html %} 
             </div>
             <!-- /.row -->
           </div>
