--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,7 +1,7 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/categories.html#info">
+                    <a href="/tags.html#info">
                       信息||Info
                     </a>
                   </li>
