--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -6,17 +6,17 @@
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#life">
+                    <a href="/tags.html#生活||Life">
                       生活||Life
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#jobs">
+                    <a href="/tags.html#职场||Jobs">
                       职场||Jobs
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#Finance">
+                    <a href="/tags.html#理财||Finance">
                       理财||Finance
                     </a>
                   </li>
@@ -26,22 +26,22 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/categories.html#movie">
+                    <a href="/tags.html#电影||Movie">
                       电影||Movie
                     </a>
                   </li>                  
 		  <li>
-                    <a href="/categories.html#music">
+                    <a href="/tags.html#音乐||Music">
                       音乐||Music
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#fun">
+                    <a href="/tags.html#娱乐||Fun">
                       娱乐||Fun
                     </a>
                   </li>
                   <li>
-                    <a href="/categories.html#Creation">
+                    <a href="/tags.html#创意||Creation">
                       创意||Creation
                     </a>
                   </li>
