--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,5 +1,5 @@
 <!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="post" data-title="欢迎留言" data-url="http://blog.pop925.net/"></div>
+	<div class="ds-thread" data-thread-key={{page.id}} data-title={{page.title}} data-url="bestop.github.io{{page.url}}"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
