--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@
           <!-- Blog Newposts Well -->
           <div class="well">
             <h4>
-              最新文章
+              最近文章
             </h4>
             <div class="row">
             <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fblog.pop925.net%2Fatom.xml&chan=title&num=5&utf=y"  charset="UTF-8" type="text/javascript"></script>
@@ -88,6 +88,30 @@
 <a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fblog.pop925.net%2Fatom.xml&chan=title&num=5&utf=y&html=y">View RSS feed</a>
 </noscript>
  
+            </div>
+            <!-- /.row -->
+          </div><!-- Blog Newposts Well -->
+          <div class="well">
+            <h4>
+              最新评论
+            </h4>
+            <div class="row">
+            <!-- 多说最新评论 start -->
+	<div class="ds-recent-comments" data-num-items="5" data-show-avatars="1" data-show-time="1" data-show-title="1" data-show-admin="1" data-excerpt-length="70"></div>
+<!-- 多说最新评论 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"netcafe"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- 多说公共JS代码 end -->
             </div>
             <!-- /.row -->
           </div>
