--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,21 +76,7 @@
             {% include search.html %} 
             <!-- /.input-group -->
           </div>
-          <!-- Blog Newposts Well -->
-          <div class="well">
-            <h4>
-              最近文章
-            </h4>
-            <div class="row">
-            <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fblog.pop925.net%2Fatom.xml&chan=title&num=5&utf=y"  charset="UTF-8" type="text/javascript"></script>
-
-<noscript>
-<a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fblog.pop925.net%2Fatom.xml&chan=title&num=5&utf=y&html=y">View RSS feed</a>
-</noscript>
- 
-            </div>
-            <!-- /.row -->
-          </div><!-- Blog Newposts Well -->
+          <!-- Blog Newcomments Well -->
           <div class="well">
             <h4>
               最新评论
