--- a/_includes/links.html
+++ b/_includes/links.html
@@ -15,8 +15,8 @@
                 </a>
               </li>
               <li>
-                <a href="http://99u.com/">
-                  99U
+                <a href="https://www.flipboard.cn/explore/">
+                   Flipboard
                 </a>
               </li>
               <li>
