--- a/_includes/links.html
+++ b/_includes/links.html
@@ -24,4 +24,9 @@
                   异次元软件
                 </a>
               </li>
+              <li>
+                <a href="http://forbetty.com/">
+                  BETTY DIARY
+                </a>
+              </li>
             </ul>
