--- a/_includes/links.html
+++ b/_includes/links.html
@@ -9,13 +9,8 @@
                   英语文摘
                 </a>
               </li>              
-              <li>
-                <a href="http://www.mifengtd.cn/">
-                  褪墨
-                </a>
-              </li>
-              <li>
-                <a href="https://www.flipboard.cn/explore/">
+                <li>
+                <a href="https://www.flipboard.com">
                    Flipboard
                 </a>
               </li>
