--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,7 +15,7 @@
               </a>
             </li>
             <li>
-              <a href="http://hijoe.tk">
+              <a href="http://note.youdao.com/share/?id=0aa5b4c6854be814f64b639bbb6654da&type=notebook">
                 文 摘
               </a>
             </li>
