--- a/css/blogger.css
+++ b/css/blogger.css
@@ -302,7 +302,7 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
 	text-rendering: optimizeLegibility;
 	color: #444;
-	background-color: #E0E0E0;
+	background-color: #ccc;
 }
 body.custom-font-enabled {
 	font-family: "Open Sans", Helvetica, Arial, sans-serif;
