--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -20,6 +20,11 @@
               </a>
             </li>
             <li>
+              <a href="https://unsplash.com/">
+                图 片
+              </a>
+            </li>
+            <li>
               <a href="/about.html">
                 关 于
               </a>
