--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,12 +15,12 @@
               </a>
             </li>
             <li>
-              <a href="http://note.youdao.com/share/?id=44a8ea470a1181e7d11b3d30790069a8&type=notebook">
+              <a target="_blank" href="http://note.youdao.com/share/?id=44a8ea470a1181e7d11b3d30790069a8&type=notebook">
                 文 摘
               </a>
             </li>
             <li>
-              <a href="https://unsplash.com/">
+              <a target="_blank" href="https://unsplash.com/">
                 图 片
               </a>
             </li>
@@ -30,7 +30,7 @@
               </a>
             </li>
             <li>
-              <a href="http://blog.pop925.net/atom.xml">
+              <a target="_blank" href="http://blog.pop925.net/atom.xml">
                 RSS
               </a>
             </li>
