--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,10 @@ layout: default
 <!-- Title -->
 <h2>
   {{ page.title }}
- 
+  <div class="post-date"><a href="https://github.com/bestop/bestop.github.io/edit/master/{{ page.path }}" target="_blank">.</a>&nbsp;&nbsp;
+	<span class="glyphicon glyphicon-time"></span>
+	{{ page.date | date_to_string }}
+  </div>
 </h2>
 <!-- Author -->
 <hr>
