--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,4 +1,4 @@
             <p align="center">
-				Copyright &copy; 2015 <a href="http://blog.pop925.net/">NetCafe</a> All Rights Reserved. 
+				Copyright &copy; 2017 <a href="http://hijoe.net/">NetCafe</a> All Rights Reserved. 
 				
             </p>
