--- a/_includes/links.html
+++ b/_includes/links.html
@@ -5,7 +5,7 @@
                 </a>
               </li>
                <li>
-                <a href="http://www.pop925.net/">
+                <a href="http://e.hijoe.net/">
                   英语文摘
                 </a>
               </li>              
