--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -30,7 +30,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="http://blog.pop925.net/atom.xml">
+              <a target="_blank" href="http://www.hijoe.net/atom.xml">
                 RSS
               </a>
             </li>
