--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,6 +1,6 @@
-<!-- LiveRe City install code -->
+<!-- 来必力City版安装代码 -->
 <div id="lv-container" data-id="city" data-uid="MTAyMC8zMjM2MC84OTIx">
-	<script type="text/javascript">
+<script type="text/javascript">
    (function(d, s) {
        var j, e = d.getElementsByTagName(s)[0];
 
@@ -12,7 +12,7 @@
 
        e.parentNode.insertBefore(j, e);
    })(document, 'script');
-	</script>
-<noscript> Please activate JavaScript for write a comment in LiveRe</noscript>
+</script>
+<noscript>为正常使用来必力评论功能请激活JavaScript</noscript>
 </div>
-<!-- completed City install code -->
+<!-- City版安装代码已完成 -->
